src/objects/SpringCMEos__EOS_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SpringCMEos__Folder_Name_Format__c</fullName>
        <label>Folder Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Path_Format__c</fullName>
        <label>Path Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Variables__c</fullName>
        <label>Variables</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EOS Type</label>
</CustomObject>